Adding SaveFramesFromBagFileApp